fixed text spacing and added tech stack in description

--- a/src/components/project-view/Project.style.css
+++ b/src/components/project-view/Project.style.css
@@ -14,6 +14,8 @@
 .project-text-container {
   width: 65%;
 
+  padding-top: calc(8px + 0.2vmin);
+
   display: flex;
   align-items: start;
   justify-content: space-between;
@@ -79,5 +81,7 @@
 
   .project-description {
     width: 100%;
+
+    padding-top: 50px;
   }
 }
